--- a/source/web/smart_city_hub Web App/src/App.css
+++ b/source/web/smart_city_hub Web App/src/App.css
@@ -57,3 +57,8 @@
 .title.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
+
+body {
+    background-color: black;
+    color: white;
+  }
